# advent-of-code-2022

./: Cargo.toml  README.md
inputs/: input13.example2.txt
src/: main.rs
