[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
itertools = "0.10.5"
num-bigint = "0.4.3"
num-traits = "0.2.15"
num-integer = "0.1.45"
pathfinding = "4.0.1"
serde = {version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
regex = "1.7.0"
rayon = "1.6.1"
